Auto-generate extensionless go wrapper routes (#369)
